[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/States/OnFireState.gd" type="Script" id=1]

[node name="OnFireState" type="Node"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BetweenTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="BetweenTimer" to="." method="_on_BetweenTimer_timeout"]
